# verl-tool

./: .gitignore  .gitmodules  README.md  call_log.txt  config.txt  data.json  mock_data.csv  output.txt  pyproject.toml  requirements.txt  sample_config.txt  storeA.csv  storeB.csv  user_account.py
assets/docs/: DAPO.md  asyncRL.md
benchmark/math-evaluation-harness/: math_eval.py
benchmark/math-evaluation-harness/scripts/: run_eval.sh
benchmarks/: README.md
benchmarks/math-evaluation-harness/: .gitignore  README.md  requirements.txt  utils.py  vt_math_eval.py
eval_service/: README.md  app.py  config.py  convert_ckpt.ipynb  model_service.py  start_api_service.sh  test_model_service.py  utils.py
eval_service/benchmarks/: README.md
eval_service/benchmarks/math-evaluation-harness/: math_eval.py  utils.py
eval_service/scripts/: serve_tooluse.sh  start_api_service.sh
eval_service/test/: test_api.py
examples/data_preprocess/: REAMDME  REAMDME.md  acecoder.py  acecoder_custom.py  deep_math.py  deepcoder.py  download_sql_data.sh  mathcoder.py  wikiQA.py
examples/train/: README.md  train_acecoder.sh  train_gsm8k.sh
examples/train/acecoder/: README.md  train.sh  train_1.5b.sh  train_1.5b_mtrl.sh  train_1.5b_mtrl_wt.sh  train_1.5b_wt.sh  train_4b.sh  train_mimo_7b.sh  train_mimo_7b_mtrl.sh  (+25 more)
verl_tool/agent_workers/: fsdp_workers.py
verl_tool/llm_agent/: config.py  manager.py  metric_utils.py  tensor_helper.py  utils.py
verl_tool/servers/: ray_serve.py  ray_utils.py  serve.py  utils.py
verl_tool/trainer/: main_ppo.py
verl_tool/workers/: fsdp_workers.py
(+114 files in other folders)
